--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,29 @@
 .row-main {
     margin: 20px;
 }
+
+.color {
+    background: #292f36;
+}
+
+.color-active {
+    border: 2px solid #4ecdc4;
+    background: #4ecdc4;
+}
+
+.color-active:hover {
+    border: 2px solid #4ecdc4;
+    background: none;
+    transition: 0.3s;
+}
+
+.btn-send {
+    border: 2px solid #ffe66d;
+    background: #ffe66d;
+}
+
+.btn-send:hover {
+    border: 2px solid #ff6b6b;
+    background: none;
+    transition: 0.3s;
+}
